[package]
name = "atomic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde={version = "1.0",features = ["derive"]}
toml="0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[profile.release]
panic = "abort"
lto = true

[build]
rustflags = ["-C", "target-feature=+crt-static"]